NetBSD Problem Report #47406

From nick@kenny.localdomain  Sat Jan  5 10:27:21 2013
Return-Path: <nick@kenny.localdomain>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 3349363E813
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  5 Jan 2013 10:27:21 +0000 (UTC)
Message-Id: <20130105090848.E2C0B11748B@kenny.localdomain>
Date: Sat,  5 Jan 2013 09:08:48 +0000 (GMT)
From: nick.hudson@gmx.co.uk
Reply-To: nick.hudson@gmx.co.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: Keyboard doesn't work when doing boot -a
X-Send-Pr-Version: 3.95

>Number:         47406
>Category:       kern
>Synopsis:       Keyboard doesn't work when doing boot -a
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 05 10:30:01 +0000 2013
>Closed-Date:    Sat Apr 26 06:19:28 +0000 2014
>Last-Modified:  Sat Apr 26 06:19:28 +0000 2014
>Originator:     Nick Hudson
>Release:        NetBSD 6.0_RC2
>Organization:
>Environment:


System: NetBSD kenny 6.0_RC2 NetBSD 6.0_RC2 (PAVILION) #0: Sat Sep 22 14:39:24 BST 2012 nick@kenny:/u/obj/amd64/usr/src/sys/arch/amd64/compile/PAVILION amd64
Architecture: x86_64
Machine: amd64
>Description:
	When booting using boot -a to enter an alternate init, etc. My keyboard
	doesn't work.

	I traced the problem back to this commit

	http://mail-index.netbsd.org/source-changes/2008/12/29/msg214584.html

	That is, sys/kern/subr_autoconf.c:1.167

	revision 1.167
	date: 2008/12/29 13:40:11;  author: ad;  state: Exp;  lines: +6 -5
	branches:  1.167.2;
	Don't need to hold kernel_lock for most of this (and not into the swapper!).

>How-To-Repeat:
	boot my machine with -a
>Fix:
	Hold the kernel_lock in autoconf?
	Fix acpi?

>Release-Note:

>Audit-Trail:
From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org
Subject: Re: kern/47406: Keyboard doesn't work when doing boot -a
Date: Sat, 05 Jan 2013 11:05:52 +0000

 This is a multi-part message in MIME format.
 --------------040500010009000506050207
 Content-Type: text/plain; charset=ISO-8859-1; format=flowed
 Content-Transfer-Encoding: 7bit

 Full dmesg of machine with the problem



 --------------040500010009000506050207
 Content-Type: text/plain; charset=us-ascii;
  name="dmesg"
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
  filename="dmesg"

 kenny$dmesg
 Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
     2006, 2007, 2008, 2009, 2010, 2011, 2012
     The NetBSD Foundation, Inc.  All rights reserved.
 Copyright (c) 1982, 1986, 1989, 1991, 1993
     The Regents of the University of California.  All rights reserved.

 NetBSD 6.0_RC2 (PAVILION) #0: Sat Sep 22 14:39:24 BST 2012
         nick@kenny:/u/obj/amd64/usr/src/sys/arch/amd64/compile/PAVILION
 total memory = 1983 MB
 avail memory = 1911 MB
 timecounter: Timecounters tick every 10.000 msec
 timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
 HP Pavilion 061 RJ058AA-ABU a1629.uk (0nx0111RE101ASTE300)
 mainbus0 (root)
 cpu0 at mainbus0 apid 0: Intel(R) Pentium(R) D CPU 2.80GHz, id 0xf47
 cpu1 at mainbus0 apid 1: Intel(R) Pentium(R) D CPU 2.80GHz, id 0xf47
 ioapic0 at mainbus0 apid 2: pa 0xfec00000, version 21, 24 pins
 acpi0 at mainbus0: Intel ACPICA 20110623
 acpi0: X/RSDT: OemId <HP-CPC,OEMRSDT ,09000605>, AslId <MSFT,00000097>
 ACPI Error: Method parse/execution failed [\_PR_.CPU1._PDC] (Node 0xfffffe807be846c8), AE_INVALID_TABLE_LENGTH (20110623/psparse-560)
 ACPI Error: Method parse/execution failed [\_PR_.CPU2._PDC] (Node 0xfffffe807be847e8), AE_INVALID_TABLE_LENGTH (20110623/psparse-560)
 acpi0: SCI interrupting at int 9
 timecounter: Timecounter "ACPI-Safe" frequency 3579545 Hz quality 900
 attimer1 at acpi0 (TMR, PNP0100): io 0x40-0x43 irq 0
 pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
 midi0 at pcppi1: PC speaker
 sysbeep0 at pcppi1
 FDC (PNP0700) at acpi0 not configured
 LPTE (PNP0401) at acpi0 not configured
 RMSC (PNP0C02) at acpi0 not configured
 pckbc1 at acpi0 (PS2K, PNP0303) (kbd port): io 0x60,0x64 irq 1
 pckbc2 at acpi0 (PS2M, PNP0F03) (aux port): irq 12
 SIOR (PNP0C02) at acpi0 not configured
 OMSC (PNP0C02) at acpi0 not configured
 AWY (AWY0001) at acpi0 not configured
 PCIE (PNP0C02) at acpi0 not configured
 RMEM (PNP0C01) at acpi0 not configured
 acpibut0 at acpi0 (PWRB, PNP0C0C-170): ACPI Power Button
 attimer1: attached to pcppi1
 pckbd0 at pckbc1 (kbd slot)
 pckbc1: using irq 1 for kbd slot
 wskbd0 at pckbd0: console keyboard
 pms0 at pckbc1 (aux slot)
 pckbc1: using irq 12 for aux slot
 wsmouse0 at pms0 mux 0
 pci0 at mainbus0 bus 0: configuration mode 1
 pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
 pchb0 at pci0 dev 0 function 0: vendor 0x1002 product 0x5a33 (rev. 0x01)
 ppb0 at pci0 dev 1 function 0: vendor 0x1002 product 0x5a3f (rev. 0x00)
 pci1 at ppb0 bus 1
 pci1: i/o space, memory space enabled
 vga0 at pci1 dev 5 function 0: vendor 0x1002 product 0x5a61 (rev. 0x00)
 wsdisplay0 at vga0 kbdmux 1: console (80x25, vt100 emulation), using wskbd0
 wsmux1: connecting to wsdisplay0
 drm at vga0 not configured
 ixpide0 at pci0 dev 17 function 0: ATI Technologies IXP IDE Controller (rev. 0x80)
 ixpide0: bus-master DMA support present
 ixpide0: primary channel configured to native-PCI mode
 ixpide0: using ioapic0 pin 23 for native-PCI interrupt
 atabus0 at ixpide0 channel 0
 ixpide0: secondary channel configured to native-PCI mode
 atabus1 at ixpide0 channel 1
 ixpide1 at pci0 dev 18 function 0: ATI Technologies IXP IDE Controller (rev. 0x80)
 ixpide1: bus-master DMA support present
 ixpide1: primary channel configured to native-PCI mode
 ixpide1: using ioapic0 pin 22 for native-PCI interrupt
 atabus2 at ixpide1 channel 0
 ixpide1: secondary channel configured to native-PCI mode
 atabus3 at ixpide1 channel 1
 ohci0 at pci0 dev 19 function 0: vendor 0x1002 product 0x4374 (rev. 0x80)
 ohci0: interrupting at ioapic0 pin 19
 ohci0: OHCI version 1.0, legacy support
 usb0 at ohci0: USB revision 1.0
 ohci1 at pci0 dev 19 function 1: vendor 0x1002 product 0x4375 (rev. 0x80)
 ohci1: interrupting at ioapic0 pin 19
 ohci1: OHCI version 1.0, legacy support
 usb1 at ohci1: USB revision 1.0
 ehci0 at pci0 dev 19 function 2: vendor 0x1002 product 0x4373 (rev. 0x80)
 ehci0: interrupting at ioapic0 pin 19
 ehci0: dropped intr workaround enabled
 ehci0: BIOS has given up ownership
 ehci0: EHCI version 1.0
 ehci0: companion controllers, 4 ports each: ohci0 ohci1
 usb2 at ehci0: USB revision 2.0
 piixpm0 at pci0 dev 20 function 0: vendor 0x1002 product 0x4372 (rev. 0x81)
 piixpm0: interrupting at SMI, polling
 iic0 at piixpm0: I2C bus
 ixpide2 at pci0 dev 20 function 1: ATI Technologies IXP IDE Controller (rev. 0x80)
 ixpide2: bus-master DMA support present
 ixpide2: primary channel configured to compatibility mode
 ixpide2: primary channel interrupting at ioapic0 pin 14
 atabus4 at ixpide2 channel 0
 ixpide2: secondary channel configured to compatibility mode
 ixpide2: secondary channel interrupting at ioapic0 pin 15
 atabus5 at ixpide2 channel 1
 hdaudio0 at pci0 dev 20 function 2: HD Audio Controller
 hdaudio0: interrupting at ioapic0 pin 16
 hdafg0 at hdaudio0: Realtek ALC888
 hdafg0: duplicate pin in association
 hdafg0: DAC00 8ch: Speaker [Jack]
 hdafg0: DAC01 2ch: HP Out [Jack]
 hdafg0: DIG02 2ch: SPDIF Out [Jack]
 hdafg0: ADC04 2ch: Mic In [Jack]
 hdafg0: 8ch/2ch 44100Hz 48000Hz 96000Hz 192000Hz PCM16 PCM20 PCM24 AC3
 audio0 at hdafg0: full duplex, playback, capture, independent
 pcib0 at pci0 dev 20 function 3: vendor 0x1002 product 0x4377 (rev. 0x80)
 ppb1 at pci0 dev 20 function 4: vendor 0x1002 product 0x4371 (rev. 0x80)
 pci2 at ppb1 bus 2
 pci2: i/o space, memory space enabled
 rtk0 at pci2 dev 5 function 0: Realtek 8139 10/100BaseTX (rev. 0x10)
 rtk0: interrupting at ioapic0 pin 20
 rtk0: Ethernet address 00:19:21:4e:16:83
 rlphy0 at rtk0 phy 7: Realtek internal PHY
 rlphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
 fwohci0 at pci2 dev 6 function 0: vendor 0x1106 product 0x3044 (rev. 0xc0)
 fwohci0: interrupting at ioapic0 pin 23
 fwohci0: OHCI version 1.10 (ROM=1)
 fwohci0: No. of Isochronous channels is 4.
 fwohci0: EUI64 00:00:0a:e6:ff:67:30:40
 fwohci0: Phy 1394a available S400, 2 ports.
 fwohci0: Link S400, max_rec 2048 bytes.
 ieee1394if0 at fwohci0: IEEE1394 bus
 fwip0 at ieee1394if0: IP over IEEE1394
 fwohci0: Initiate bus reset
 isa0 at pcib0
 lpt0 at isa0 port 0x378-0x37b irq 7
 fdc0 at isa0 port 0x3f0-0x3f7 irq 6 drq 2
 acpicpu0 at cpu0: ACPI CPU
 acpicpu0: C1: HLT, lat   0 us, pow     0 mW
 acpicpu1 at cpu1: ACPI CPU
 fwohci0: BUS reset
 fwohci0: node_id=0xc800ffc0, gen=1, CYCLEMASTER mode
 ieee1394if0: 1 nodes, maxhop <= 0 cable IRM irm(0) (me)
 ieee1394if0: bus manager 0
 timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
 timecounter: Timecounter "TSC" frequency 2799436220 Hz quality 3000
 uhub0 at usb0: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
 uhub0: 4 ports with 4 removable, self powered
 uhub1 at usb1: vendor 0x1002 OHCI root hub, class 9/0, rev 1.00/1.00, addr 1
 uhub1: 4 ports with 4 removable, self powered
 uhub2 at usb2: vendor 0x1002 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
 uhub2: 8 ports with 8 removable, self powered
 umass0 at uhub2 port 8 configuration 1 interface 0
 umass0: Generic USB2.0-CRW, rev 2.00/11.0d, addr 2
 umass0: using SCSI over Bulk-Only
 scsibus0 at umass0: 2 targets, 4 luns per target
 sd0 at scsibus0 target 0 lun 0: <Generic-, Compact Flash, 1.00> disk removable
 sd0: drive offline
 sd0: unable to open device, error = 19
 sd1 at scsibus0 target 0 lun 1: <Generic-, SM/xD-Picture, 1.00> disk removable
 sd1: drive offline
 sd1: unable to open device, error = 19
 sd2 at scsibus0 target 0 lun 2: <Generic-, SD/MMC, 1.00> disk removable
 sd2: drive offline
 sd2: unable to open device, error = 19
 sd3 at scsibus0 target 0 lun 3: <Generic-, MS/MS-Pro, 1.00> disk removable
 sd3: drive offline
 sd3: unable to open device, error = 19
 wd0 at atabus2 drive 0
 wd0: <ST3200827AS>
 wd0: drive supports 16-sector PIO transfers, LBA48 addressing
 wd0: 186 GB, 387621 cyl, 16 head, 63 sec, 512 bytes/sect x 390721968 sectors
 wd0: 32-bit data port
 wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 5 (Ultra/100)
 wd0(ixpide1:0:0): using PIO mode 4, Ultra-DMA mode 5 (Ultra/100) (using DMA)
 atapibus0 at atabus5: 2 targets
 cd0 at atapibus0 drive 0: <HL-DT-STDVDRRW GSA-H20L, , S742> cdrom removable
 cd0: 32-bit data port
 cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 2 (Ultra/33)
 cd0(ixpide2:1:0): using PIO mode 4, Ultra-DMA mode 2 (Ultra/33) (using DMA)
 Kernelized RAIDframe activated
 pad0: outputs: 44100Hz, 16-bit, stereo
 audio1 at pad0: half duplex, playback, capture
 boot device: wd0
 root on wd0a dumps on wd0b
 root file system type: ffs
 wsdisplay0: screen 1 added (80x25, vt100 emulation)
 wsdisplay0: screen 2 added (80x25, vt100 emulation)
 wsdisplay0: screen 3 added (80x25, vt100 emulation)
 wsdisplay0: screen 4 added (80x25, vt100 emulation)




 --------------040500010009000506050207--

From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47406 CVS commit: [netbsd-6] src/sys/dev/ic
Date: Fri, 7 Feb 2014 11:15:37 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Fri Feb  7 11:15:37 UTC 2014

 Modified Files:
 	src/sys/dev/ic [netbsd-6]: pckbc.c

 Log Message:
 Pull up the following revisions(s) (requested by skrll in ticket #1014):
 	sys/dev/ic/pckbc.c:	revision 1.56

 Do not take data from the keyboard controller in interrupt handler if
 we are polling. Fixes PR/47406


 To generate a diff of this commit:
 cvs rdiff -u -r1.53 -r1.53.2.1 src/sys/dev/ic/pckbc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 26 Apr 2014 05:53:57 +0000
State-Changed-Why:
Is this fixed? (half the trail seems to be missing)


State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sat, 26 Apr 2014 06:19:28 +0000
State-Changed-Why:
Fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.