Pull up the following revisions(s) (requested by skrll in ticket #1014): 	sys/dev/ic/pckbc.c:	revision 1.56

Do not take data from the keyboard controller in interrupt handler if
we are polling. Fixes PR/47406